# OOP

./: README.md
C++OOP/OOPTesting/: Beverage.cpp  Beverage.h  CMakeLists.txt  VendingMachine.cpp  VendingMachine.h  main.cpp
javaProject.IntelliJ/LAb1_VendMachine/src/: Beverage.java  LoadMachine.java  Main.java  VendingMachine.java  Vending_Machine.java
javaProject.IntelliJ/Lab2_Inheritence/src/DefaultPackage/: Delay.java  Main.java  Phase1.java  Phase2.java  Phase2User.java
javaProject.IntelliJ/Lab3_Banking/: balances.txt  users.ser  users.txt
javaProject.IntelliJ/Lab3_Banking/src/: Main.java
javaProject.IntelliJ/Lab4_Generics/src/: Main.java  Person.java  Registry.java  Student.java  Teacher.java
javaProject.IntelliJ/OOP labs/src/: Lab0.java  Lab1.java  Main.java
javaProject.IntelliJ/Projekt - Hero Arena. Simon Magnusson/: Armors.txt  Main.java  Weapons.txt
javaProject.IntelliJ/Projekt - Hero Arena. Simon Magnusson/Characters/: Character.java  Hero.java  Monster.java
javaProject.IntelliJ/Projekt - Hero Arena. Simon Magnusson/Engines/: GameManager.java  HeroArena.java  ItemManager.java  Utils.java
javaProject.IntelliJ/Projekt - Hero Arena. Simon Magnusson/Items/: Armor.java  Item.java  Weapon.java
javaProject.IntelliJ/TestingGrounds/: example.txt  output.txt  records.txt  text.txt
javaProject.IntelliJ/TestingGrounds/src/: Account.java  Animal.java  Appending.java  CombinedExample.java  FileIOExamples.java  Main.java  RandomAccessFileExample.java  TestaRegex.java  Time1.java  testaPrintf.java
(+38 files in other folders)
